PIDEV-YBrainy-E-leraning-certifications-Platform/ybrainy events/devops/gatekeeper/disallow-latest-dryrun.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatestTag
metadata:
  name: disallow-latest-tag-in-ybrainy
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces:
      - ybrainy
