PIDEV-YBrainy-E-leraning-certifications-Platform/ybrainy events/devops/gatekeeper/k8sdisallowlatesttag-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowlatesttag
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatestTag
      validation:
        openAPIV3Schema:
          properties:
            exemptImages:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowlatesttag

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          not exempt(container.image)
          endswith(lower(container.image), ":latest")
          msg := sprintf("container %q uses a forbidden latest tag in image %q", [container.name, container.image])
        }

        exempt(image) {
          exempt_image := input.parameters.exemptImages[_]
          startswith(image, exempt_image)
        }
