PIDEV-YBrainy-E-leraning-certifications-Platform/ybrainy events/devops/gatekeeper/require-resources-dryrun.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-resource-requests-and-limits
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces:
      - ybrainy
